--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
   overflow-x: hidden;
   margin: 0;
   font-family: 'Source Sans Pro', sans-serif;
+  color: var(--textColor);
 }
 *{
   box-sizing: border-box;
@@ -23,7 +24,9 @@ body {
 a{
   text-decoration: none;
 }
-
+.header-separator{
+  margin-top: 110px;
+}
 .btn{
   padding: 10px 20px;
   border-radius: 5px;
@@ -41,8 +44,21 @@ a{
   background-color: #b61127;
   cursor: pointer;
 }
+.subheader{
+  width: 100vw;
+  background-color: rgb(240, 240, 240);
+  border-top: 1px solid rgb(122, 122, 122);
+  border-bottom: 1px solid rgb(122,122,122);
+  padding: 20px 0;
+}
+.subheaderInner{
+  max-width: 1200px;
+  margin: 0 auto;
+}
 
 
+
+/* MINI HEADER SECTION */
 
 .miniHeader{
   height: 50px;
@@ -59,8 +75,10 @@ a{
 .miniHeader svg{
   margin-right: 10px;
 }
-.miniHeader-cart, .miniHeader-profile{
+.miniHeader a{
   margin: 0 25px;
+}
+.miniHeader-cart, .miniHeader-profile{
   color: #d1d1d1;
   font-size: 20px;
   display: flex;
@@ -68,6 +86,7 @@ a{
   border: 1px solid #818181;
   border-radius: 10px;
   padding: 5px;
+  transition: 200ms;
 }
 .miniHeader-cart:hover{
   color: #fafafa;
@@ -290,9 +309,46 @@ header {
 }
 
 
+/* PROFILE PAGE */
+.profileContainer{
+  width: 100%;
+}
+.profileInner{
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  min-height: 100vh;
+}
+.profile-login, .profile-signup{
+  width: 40%;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  background-color: #fafafa;
+  border-radius: 30px;
+  border: 1px solid rgb(223, 223, 223);
+  margin: 20px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.profileInner h3{
+  margin-bottom: 20px;
+}
+
+
+
 
 /* mobile  */
 @media screen and (max-width: 1000px){
+
+  .header-separator{
+    margin-top: 80px;
+  }
+  .subheaderInner{
+    text-align: center;
+  }
+
 
   .miniHeaderInner{
     justify-content: space-around;
@@ -364,5 +420,18 @@ header {
     height: 35px;
     width: 35px;
   }
+
+
+  /* PROFILE PAGE */
+  .profileInner{
+    flex-direction: column;
+  }
+  .profile-login, .profile-signup{
+    width: unset;
+    padding: 20px;
+    align-self: center;
+    width: 90%;
+  }
+
 
 }
