--- a/src/index.css
+++ b/src/index.css
@@ -52,8 +52,12 @@ a{
   padding: 20px 0;
 }
 .subheaderInner{
+  padding-left: 20px;
   max-width: 1200px;
   margin: 0 auto;
+}
+div.hide{
+  display: none;
 }
 
 
@@ -102,9 +106,6 @@ a{
 
 
 header {
-  position: absolute;
-  top: 50;
-  left: 0;
   background-color: rgba(255, 255, 255, 0.521);
   height: 110px;
   width: 100%;
@@ -216,7 +217,7 @@ header {
 }
 
 .hero{
-  height: 85vh;
+  max-height: 85vh;
   width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
@@ -224,68 +225,10 @@ header {
   background-position-x: center;
 }
 .heroInner{
-  max-width: 1200px;
-  margin: 0 auto;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-}
-.heroInner h1 span{
-  color: var(--primaryColor);
 }
 
-.heroInner h1{
-  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
-  font-size: 60px;
-  color: #FAFAFA;
-  padding: 5px 0;
-  position: relative;
-  overflow: hidden;
-}
-.heroInner h1::after{
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background: white;
-  animation: a-ltr-after 0.3s cubic-bezier(.77,0,.18,1) forwards;
-  transform: translateX(-101%);
-}
-.heroInner h1::before{
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background: #747474;
-  animation: a-ltr-before 0.3s cubic-bezier(.77,0,.18,1) forwards;
-  transform: translateX(0);
-}
-.heroInner h1:nth-of-type(1)::before,
-.heroInner h1:nth-of-type(1)::after{
-    animation-delay: 0.3s;
-}
-.heroInner h1:nth-of-type(2)::before,
-.heroInner h1:nth-of-type(2)::after{
-    animation-delay: 0.6s;
-}
-@keyframes a-ltr-after{
-  0% {transform: translateX(-100%)}
-  100% {transform: translateX(101%)}
-}
-@keyframes a-ltr-before{
-  0% {transform: translateX(0)}
-  100% {transform: translateX(200%)}
-}
-.heroInner button{
-  position: relative;
-  top: 60px
-}
+
 
 .cartButton {
   position: fixed;
