--- a/src/index.css
+++ b/src/index.css
@@ -229,14 +229,15 @@ header {
 }
 
 
-
+/* CART BUTTON STYLES */
 .cartButton {
+  z-index: 2;
   position: fixed;
   bottom: 50px;
   right: 50px;
   border: none;
   border-radius: 50px;
-  background-color: rgb(2, 162, 255);
+  background-color: #2196f3;
   box-shadow: rgba(0, 0, 0, 0.76) 0px 0px 15px;
   display: flex;
   justify-content: center;
@@ -280,7 +281,86 @@ header {
 }
 
 
-
+/* HOME PAGE CATEGORIES */
+.featuredProducts{
+  padding: 30px;
+  background-color: rgb(233, 233, 233);
+}
+.featuredProductsInner{
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.featuredProducts-header{
+  text-align: center;
+  margin-top: 20px;
+}
+.featuredProducts .genders{
+  display: flex;
+  padding: 40px 0;
+}
+.featuredProducts .genders .card{
+  flex-grow: 1;
+  height: 200px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+.featuredProducts .genders .card .bg{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center top;
+  filter: grayscale(70%);
+  transition: 700ms;
+}
+.featuredProducts .genders .card .bg:hover{
+  cursor: pointer;
+  transform: scale(1.1);
+  filter: grayscale(0);
+}
+.featuredProducts .genders .card span{
+  z-index: 1;
+  font-weight: bold;
+  color: white;
+  font-size: 39px;
+  text-shadow: 0px 0px 10px #000000;
+}
+.featuredProducts .cardContainer{
+  padding: 40px 0;
+  display: flex;
+  justify-content: space-around;
+}
+.featuredProducts .cardContainer .productCard{
+  width: 15%;
+}
+.productCard{
+  padding: 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border: 1px solid grey;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+}
+.productCard-description{
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+.productCard-description h4{
+  text-align: center;
+  font-weight: normal;
+  margin: 15px 0;
+}
+.productCard-image img{
+  border-radius: 5px;
+  height: 150px;
+}
 
 /* mobile  */
 @media screen and (max-width: 1000px){
@@ -376,5 +456,7 @@ header {
     width: 90%;
   }
 
+  /* FEATURED PRODUCTS */
+  
 
 }
