--- a/src/index.css
+++ b/src/index.css
@@ -103,7 +103,7 @@ div.hide{
 /* HOVER CONTAINER STYLES */
 .hoverContainer{
   z-index: 3;
-  background-color: #ffffff;
+  background-color: #e9e9e9;
   position: absolute;
   width: 100%;
   top: 160px;
