--- a/src/index.css
+++ b/src/index.css
@@ -413,11 +413,85 @@ header {
   font-weight: normal;
   margin: 15px 0;
 }
+.productCard-image{
+  display: flex;
+  justify-content: center;
+}
 .productCard-image img{
   border-radius: 5px;
   height: 150px;
 }
-
+/* FOOTER STYLES */
+.footer {
+  background: rgb(0,6,62);
+  background: linear-gradient(150deg, rgba(0,6,62,1) 0%, rgba(0,0,0,1) 100%);
+  color: #fafafa;
+}
+.footerInner{
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+.footer .bottom {
+  padding: 40px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer .copyrigth{
+  font-size: 10px;
+}
+.footer .social {
+  width: 120px;
+  display: flex;
+  justify-content: space-between;
+}
+.footer .social svg{
+  fill: white;
+}
+.newsletter{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px 0;
+}
+.newsletter p{
+  opacity: .7;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.links{
+  padding: 40px 0;
+  border-top: 1px solid gray;
+  border-bottom: 1px solid gray;
+  display: flex;
+  justify-content: center;
+}
+.links .kupovina, .links .oNama{
+  display: flex;
+  flex-direction: column;
+  margin: 0 5%;
+}
+.links .kupovina h2, .links .oNama h2{
+  text-align: center;
+  margin-bottom: 10px;
+}
+.links .items{
+  display: flex;
+  flex-direction: column;
+}
+.links .items a{
+  text-align: center;
+  color: #fafafa;
+  text-decoration: none;
+  font-size: 22px;
+  letter-spacing: -1px;
+  transition: 200ms;
+  opacity: .7;
+}
+.links .items a:hover{
+  opacity: 1;
+}
 
 /* mobile  */
 @media screen and (max-width: 1000px){
