--- a/src/allProducts.css
+++ b/src/allProducts.css
@@ -25,14 +25,74 @@
   /* todo: remove min-height */
   min-height: 50vh;
 
-  padding: 40px 0;
+  padding: 40px 20px;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
 }
 .allProducts .productsList .productCard{
-  width: 15%;
-  min-width: 170px;
   margin-bottom: 20px;
-  height: 300px;
+}
+.allProducts .descriptionText{
+  opacity: .6;
+  text-align: center;
+  margin-top: 9px;
+  font-weight: normal;
+}
+
+
+
+
+.singleProduct{
+  background-color: rgb(255, 249, 241);
+  border-top: 1px solid gray;
+}
+.singleProductInner{
+  padding: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.singleProduct h1{
+  text-align: center;
+  margin: 30px 0;
+  text-decoration: underline;
+}
+
+section.newsletter{
+  background-color: #EDE734;
+}
+.newsletterInner{
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 20px;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.newsletterInner h1{
+  color: black;
+  flex-grow: 1;
+}
+.newsletterInner button{
+  flex-grow: 1;
+  background-color: #A7DA20;
+  color: black;
+  font-weight: bold;
+  border-radius: unset;
+}
+.newsletterInner button:hover{
+  background-color: #96c21d;
+}
+
+
+
+
+
+@media screen and (max-width: 1000px){
+  .newsletterInner{
+    flex-direction: column;
+  }
+  .newsletterInner button{
+    margin-top: 20px;
+  }
 }
