--- a/src/allProducts.css
+++ b/src/allProducts.css
@@ -84,6 +84,18 @@ section.newsletter{
   background-color: #96c21d;
 }
 
+.filters {
+  padding: 10px;
+  border-bottom: 1px solid rgb(204, 204, 204);
+}
+.filtersInner{
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+}
+.filtersInner .sortSelect{
+  justify-self: flex-end;
+}
 
 
 
