--- a/src/allProducts.css
+++ b/src/allProducts.css
@@ -44,18 +44,50 @@
 
 
 .singleProduct{
-  background-color: rgb(255, 249, 241);
   border-top: 1px solid gray;
+  background-color: #EBEEEF;
+
 }
 .singleProductInner{
   padding: 20px;
+  padding-top: 0;
   max-width: 1200px;
   margin: 0 auto;
 }
 .singleProduct h1{
-  text-align: center;
-  margin: 30px 0;
   text-decoration: underline;
+  font-size: 25px;
+}
+.singleProduct .container{
+  display: flex;
+}
+.singleProduct .left{
+  padding: 30px 0;
+}
+.singleProduct .right{
+  background-color: white;
+  padding: 20px;
+}
+.singleProduct .price{
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 20px;
+}
+.singleProduct .promoText{
+  margin-top: 20px;
+  opacity: .8;
+}
+.singleProduct .descHeader{
+  font-size: 18px;
+  letter-spacing: 2px;
+  font-weight: normal;
+  font-style: italic;
+  margin-bottom: 10px;
+  margin-top: 30px;
+  opacity: .8;
+}
+.singleProduct .descText{
+  font-size: 21px;
 }
 
 section.newsletter{
