--- a/src/allProducts.css
+++ b/src/allProducts.css
@@ -48,12 +48,6 @@
   background-color: #EBEEEF;
 
 }
-.singleProductInner{
-  padding: 20px;
-  padding-top: 0;
-  max-width: 1200px;
-  margin: 0 auto;
-}
 .singleProduct h1{
   text-decoration: underline;
   font-size: 25px;
@@ -63,10 +57,43 @@
 }
 .singleProduct .left{
   padding: 30px 0;
+  width: 50%;
 }
 .singleProduct .right{
+  width: 50%;
   background-color: white;
   padding: 20px;
+  padding-left: 40px;
+}
+.singleProduct .right button{
+  width: 200px;
+  display: block;
+  margin-top: 20px;
+}
+.singleProduct .colorPicker{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 20px;
+}
+.singleProduct .colorPicker .label{
+  font-weight: bold;
+  margin-right: 10px;
+}
+.singleProduct .colorPicker .colorItem{
+  width: 60px; height: 60px;
+  border-radius: 5px;
+  border: 1px solid rgb(187, 187, 187);
+  margin: 0 10px;
+}
+.singleProduct .colorPicker .colorItem:hover{
+  cursor: pointer;
+}
+.singleProduct .colorPicker .colorItem.active{
+  border: 4px solid rgb(78, 78, 255);
+}
+.singleProduct .colorPicker .colorContainer{
+  display: flex;
 }
 .singleProduct .price{
   font-size: 20px;
@@ -85,8 +112,12 @@
   margin-bottom: 10px;
   margin-top: 30px;
   opacity: .8;
+  text-align: center;
 }
 .singleProduct .descText{
+  text-align: center;
+  margin: 0 auto;
+  max-width: 30%;
   font-size: 21px;
 }
 
