--- a/src/allProducts.css
+++ b/src/allProducts.css
@@ -56,11 +56,13 @@
   display: flex;
 }
 .singleProduct .left{
-  padding: 30px 0;
+  padding: 30px 0 0 0;
   width: 50%;
 }
 .singleProduct .right{
   width: 50%;
+  display: flex;
+  flex-direction: column;
   background-color: white;
   padding: 20px;
   padding-left: 40px;
@@ -68,13 +70,14 @@
 .singleProduct .right button{
   width: 200px;
   display: block;
-  margin-top: 20px;
+  margin-top: 60px;
 }
 .singleProduct .colorPicker{
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 20px;
+  padding: 20px 0;
+  border-top: 1px solid rgb(189, 189, 189);
 }
 .singleProduct .colorPicker .label{
   font-weight: bold;
@@ -95,6 +98,32 @@
 .singleProduct .colorPicker .colorContainer{
   display: flex;
 }
+.singleProduct .sizePicker{
+  padding: 60px 0 20px 0;
+}
+.singleProduct .sizePicker .sizeContainer{
+  display: flex;
+  margin: 10px 0;
+}
+.singleProduct .sizePicker .sizeItem{
+  width: 25%;
+  border: 1px solid rgb(211, 211, 211);
+  text-align: center;
+  padding: 10px 0;
+}
+.singleProduct .sizePicker .sizeItem.active{
+  background-color: black;
+  color: white;
+  font-weight: bold;
+}
+.singleProduct .sizePicker .sizeItem:hover{
+  background-color: black;
+  color: white;
+  cursor: pointer;
+}
+.singleProduct .sizePicker .label{
+  font-weight: bold;
+}
 .singleProduct .price{
   font-size: 20px;
   font-weight: bold;
@@ -105,20 +134,22 @@
   opacity: .8;
 }
 .singleProduct .descHeader{
+  border-top: 1px solid rgb(189, 189, 189);
+  text-align: center;
   font-size: 18px;
   letter-spacing: 2px;
   font-weight: normal;
   font-style: italic;
-  margin-bottom: 10px;
-  margin-top: 30px;
+  padding-bottom: 5px;
+  padding-top: 30px;
   opacity: .8;
-  text-align: center;
 }
 .singleProduct .descText{
-  text-align: center;
   margin: 0 auto;
+  text-align: center;
   max-width: 30%;
   font-size: 21px;
+  padding-bottom: 20px;
 }
 
 section.newsletter{
