--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,8 @@ div.hide{
   height: 50px;
   width: 100%;
   background-color: var(--textColor);
+  position: fixed;
+  z-index: 9999;
 }
 .miniHeaderInner {
   height: 100%;
@@ -151,8 +153,9 @@ header .hovCont p:hover, header .hovCont h3:hover{
 
 header {
   background-color: rgba(255, 255, 255, 0.521);
-  height: 110px;
+  height: 160px;
   width: 100%;
+  padding-top: 50px;
 }
 .navbarInner {
   max-width: 1200px;
