--- a/src/cart.css
+++ b/src/cart.css
@@ -154,6 +154,23 @@
   display: none;
 }
 
+
+
+/* BUYERS INFORMATION */
+.buyersInfo {
+  padding: 20px;
+}
+.buyersInfo .inputContainer{
+  display: flex;
+  flex-direction: column;
+  width: 40%;
+  background-color: white;
+  border-radius: 10px;
+  padding: 30px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+
 @media screen and (max-width: 1000px){
   .productConfirm .total{
     width: 100%;
@@ -166,4 +183,5 @@
   .productConfirm .listItem, .productConfirm .placeholder{
     display: none;
   }
+  
 }
