--- a/src/index.css
+++ b/src/index.css
@@ -287,7 +287,7 @@ header {
   bottom: 50px;
   right: 50px;
   border: none;
-  border-radius: 50px;
+  border-radius: 10px;
   background-color: #2196f3;
   box-shadow: rgba(0, 0, 0, 0.76) 0px 0px 15px;
   display: flex;
@@ -322,7 +322,7 @@ header {
   display: flex;
   flex-direction: column;
   background-color: #fafafa;
-  border-radius: 30px;
+  border-radius: 10px;
   border: 1px solid rgb(223, 223, 223);
   margin: 20px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -400,41 +400,39 @@ header {
 .productCard{
   width: 250px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  border-radius: 15px;
   display: flex;
   flex-direction: column;
   transition: 200ms;
-  padding-bottom: 20px;
 }
 .productCard:hover{
   transform: scale(1.02);
   cursor: pointer;
 } 
+.productCard:hover .price{
+  bottom: 20px;
+}
 .productCard-description{
   flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+  padding: 10px 20px;
 }
 .productCard-description h4{
-  text-align: center;
-  font-weight: normal;
-  margin: 15px 0;
   color: #000000;
-  font-weight: bold;
-  opacity: .8;
+  font-weight: bold;  
 }
 .productCard-image{
+  position: relative;
   display: flex;
   justify-content: center;
 }
 .productCard .price{
-  margin-bottom: 10px;
-  background-color: rgb(255, 255, 176);
+  position: absolute;
+  bottom: 0;
+  left: 15px;
+  padding: 1px 3px;
+  background-color: rgb(255, 255, 255);
+  transition: 200ms;
 }
 .productCard-image img{
-  border-radius: 15px 15px 0 0;
   height: 250px;
 }
 /* FOOTER STYLES */
@@ -525,7 +523,7 @@ header {
   }
 
   header {
-    height: 80px;
+    height: 130px;
   }
   .navbarInner{
     height: unset;
