--- a/src/css/index.css
+++ b/src/css/index.css
@@ -305,6 +305,7 @@ header {
 
 
 /* PROFILE PAGE */
+
 .profileContainer{
   width: 100%;
 }
@@ -325,11 +326,27 @@ header {
   border-radius: 10px;
   border: 1px solid rgb(223, 223, 223);
   margin: 20px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  box-shadow: none;
 }
 .profileInner h3{
   margin-bottom: 20px;
 }
+.profileData h3{
+  padding: 20px 0;
+}
+.profileData {
+  margin: 30px 10px;
+  border-radius: 12px;
+  min-height: 30vh;
+}
+.profileDataInner{
+  margin: 0 auto;
+  max-width: 1200px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 12px;
+  padding: 10px 20px;
+}
+
 
 
 /* HOME PAGE CATEGORIES */
